--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,21 +9,27 @@ jobs:
                 node-version: [13.x]
 
         steps:
-            - uses: actions/checkout@v1
-              with:
-                ref: master
-
-            - name: Node ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
-              with:
-                  node-version: ${{ matrix.node-version }}
-
-            - name: Install
-              run: npm install
-
-            - name: copy env file
+            - name: Step that prints name of pull request's base branch
               run: |
-                yes| cp ./src/environments/environment.ts.dist ./src/environments/environment.ts
+                echo "Pull request's base branch is: ${BASE_BRANCH}"
+              env:
+                BASE_BRANCH: ${{ github.base_ref }}
+          
+#            - uses: actions/checkout@v1
+#              with:
+#                ref: master
+
+#            - name: Node ${{ matrix.node-version }}
+#              uses: actions/setup-node@v1
+#              with:
+#                  node-version: ${{ matrix.node-version }}
+
+#            - name: Install
+#              run: npm install
+
+ #           - name: copy env file
+ #             run: |
+ #               yes| cp ./src/environments/environment.ts.dist ./src/environments/environment.ts
   
-            - name: Test
-              run: npm run test -- --no-watch
+ #           - name: Test
+ #             run: npm run test -- --no-watch
