Try get name of pull request branch

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,7 +13,7 @@ jobs:
               run: |
                 echo "Pull request's base branch is: ${BASE_BRANCH}"
               env:
-                BASE_BRANCH: ${{ github.base_ref }}
+                BASE_BRANCH: ${{ github.event.pull_request.head.ref }}
           
 #            - uses: actions/checkout@v1
 #              with:
