--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,6 +9,18 @@ jobs:
                 node-version: [13.x]
 
         steps:
+            - name: Step that prints name of pull request's author
+              run: |
+                echo "Pull request's author is: ${REQUEST_AUTHOR}"
+              env:
+                REQUEST_AUTHOR: ${{ github.event.head_commit.author.name }}
+                
+            - name: Step that prints email of pull request's author
+              run: |
+                echo "Pull request's author is: ${REQUEST_AUTHOR_EMAIL}"
+              env:
+                REQUEST_AUTHOR_EMAIL: ${{ github.event.head_commit.author.email }}
+                
             - name: Step that prints name of pull request's base branch
               run: |
                 echo "Pull request's base branch is: ${BASE_BRANCH}"
