--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,7 +13,8 @@ jobs:
               run: |
                 echo "Pull request's author is: ${REQUEST_AUTHOR}"
               env:
-                REQUEST_AUTHOR: ${{ github.event.head_commit.author.name }}
+                REQUEST_AUTHOR: ${{ github.actor }}
+                                                   # event.head_commit.author.name }}
                 
             - name: Step that prints email of pull request's author
               run: |
