Correct token name

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -57,6 +57,6 @@ jobs:
                   # Optional. Post a issue comment just before closing a pull request.
                   comment: "We do not accept PRs. If you have any questions, please feel free to contact us."
                env:
-                   GITHUB_TOKEN: ${{ secrets.D8B-FRONTEND-TOKEN }}
+                   GITHUB_TOKEN: ${{ secrets.D8B_FRONTEND_TOKEN }}
                if: ${{ failure() }}
               
