--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,6 +45,44 @@ jobs:
               env:
                 GITHUB_TOKEN: ${{ secrets.D8B_FRONTEND_TOKEN }}
               if: ${{ success() }}
+              
+            - name: Send email if failure tests
+              uses: dawidd6/action-send-mail@v2
+              if: ${{ failure() }}
+#always() }}
+              with:
+                server_address: smtp.yandex.ru
+                server_port: 465
+                username: ${{secrets.MAIL_USERNAME}}
+                password: ${{secrets.MAIL_PASSWORD}}
+                subject: Github Actions - test failure
+                # Literal body:
+                body: Tests of ${{github.repository}} are failure
+                to: ko.grebennikov@gmail.com
+                from: Github actions # <user@example.com>
+                # Optional content type (defaults to text/plain):
+                content_type: text/html
+                # Optional attachments:
+                # attachments: attachments.zip,git.diff,./dist/static/main.js
+                    
+            - name: Send email if success tests
+              uses: dawidd6/action-send-mail@v2
+              if: ${{ success() }}
+#always() }}
+              with:
+                server_address: smtp.yandex.ru
+                server_port: 465
+                username: ${{secrets.MAIL_USERNAME}}
+                password: ${{secrets.MAIL_PASSWORD}}
+                subject: Github Actions - test success
+                # Literal body:
+                body: Tests of ${{github.repository}} are success
+                to: ko.grebennikov@gmail.com
+                from: Github actions # <user@example.com>
+                # Optional content type (defaults to text/plain):
+                content_type: text/html
+                # Optional attachments:
+                # attachments: attachments.zip,git.diff,./dist/static/main.js
 
 #            - name: Node ${{ matrix.node-version }}
 #              uses: actions/setup-node@v1
