Add condition for failure

--- a/.github/workflows/PR-test.yml
+++ b/.github/workflows/PR-test.yml
@@ -12,7 +12,9 @@ jobs:
             - name: Failure step
               run: |
                   doond
+                  
             - name: Print context
+              if: {{ failure() }}
               run: |
                   echo "$GITHUB_CONTEXT"
               env:
