--- a/.github/workflows/PR-test.yml
+++ b/.github/workflows/PR-test.yml
@@ -21,6 +21,6 @@ jobs:
                   GITHUB_CONTEXT: ${{ toJson(github) }}
 
             - name: Print test message
-              #if: ${{ failure() }}
+              if: ${{ failure() }}
               run: |
                   echo "test"
