--- a/.github/workflows/push_deploy_test.yml
+++ b/.github/workflows/push_deploy_test.yml
@@ -32,10 +32,10 @@ jobs:
               uses: garygrossgarten/github-action-ssh@release
               with:
                 command: ls -a
-                host: ${{ secrets.HOST }}
+                host: ${{ secrets.STAGEHOST }}
                 username: mb
                 #passphrase: ${{ secrets.PASSPHRASE }}
-                privateKey: ${{ secrets.PRIVATE_KEY}}
+                privateKey: ${{ secrets.STAGEDEPLKEY }}
     
       
             - name: Send email if failure tests
