--- a/.github/workflows/push_deploy_test.yml
+++ b/.github/workflows/push_deploy_test.yml
@@ -48,6 +48,14 @@ jobs:
                 key: ${{ secrets.STAGEDEPLKEY }}
                 script: docker-compose -f /var/maxibooking/d8b-front-npm-install.yml up
                        
+            - name: front build
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.STAGEHOST }}
+                username: mb
+                passphrase: ${{ secrets.STAGEDEPLPASS }}
+                key: ${{ secrets.STAGEDEPLKEY }}
+                script: docker-compose -f /var/maxibooking/d8b-front-npm-build.yml up
       
             - name: Send email if failure tests
               uses: dawidd6/action-send-mail@v2
