--- a/.github/workflows/PR-test.yml
+++ b/.github/workflows/PR-test.yml
@@ -34,4 +34,21 @@ jobs:
               if: ${{ failure() }}
               run: |
                   echo "Check 5"
-
+                  
+            - name: Send email if failure tests
+              uses: dawidd6/action-send-mail@v2
+              if: ${{ failure() }}
+              with:
+                server_address: smtp.yandex.ru
+                server_port: 465
+                username: ${{secrets.MAIL_USERNAME}}
+                password: ${{secrets.MAIL_PASSWORD}}
+                subject: Github Actions - test failure
+                # Literal body:
+                body: Tests of ${{github.repository}} on push are failure
+                to: k.grebennikov@maxi-booking.ru, konstantin.grebennikov@maxi-booking.com
+                from: Github actions # <user@example.com>
+                # Optional content type (defaults to text/plain):
+                content_type: text/html
+                # Optional attachments:
+                # attachments: attachments.zip,git.diff,./dist/static/main.js
