--- a/.github/workflows/back_on_push_test.yml
+++ b/.github/workflows/back_on_push_test.yml
@@ -39,32 +39,50 @@ jobs:
                     cd ${{ secrets.BACKDIR }}
                     git pull
                     
-#            - name: npm install
-#              uses: appleboy/ssh-action@master
-#              with:
-#                host: ${{ secrets.STAGEHOST }}
-#                username: mb
-#                passphrase: ${{ secrets.STAGEDEPLPASS }}
-#                key: ${{ secrets.STAGEDEPLKEY }}
-#                script: docker-compose -f /var/maxibooking/d8b-front-npm-install.yml up
+            - name: Install nmp dependencies
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.STAGEHOST }}
+                username: mb
+                passphrase: ${{ secrets.STAGEDEPLPASS }}
+                key: ${{ secrets.STAGEDEPLKEY }}
+                script: docker-compose -f /var/maxibooking/d8b-back-npm-install.yml up
                        
-#            - name: front build
-#              uses: appleboy/ssh-action@master
-#              with:
-#                host: ${{ secrets.STAGEHOST }}
-#                username: mb
-#                passphrase: ${{ secrets.STAGEDEPLPASS }}
-#                key: ${{ secrets.STAGEDEPLKEY }}
-#                script: docker-compose -f /var/maxibooking/d8b-front-npm-build.yml up
+            - name: Django migrate
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.STAGEHOST }}
+                username: mb
+                passphrase: ${{ secrets.STAGEDEPLPASS }}
+                key: ${{ secrets.STAGEDEPLKEY }}
+                script: docker-compose -f /var/maxibooking/d8b-back-django-cli.yml run --rm d8b-back-django-cli ./manage.py migrate --no-input
 
-#            - name: nginx restart
-#              uses: appleboy/ssh-action@master
-#              with:
-#                host: ${{ secrets.STAGEHOST }}
-#                username: mb
-#                passphrase: ${{ secrets.STAGEDEPLPASS }}
-#                key: ${{ secrets.STAGEDEPLKEY }}
-#                script: docker container restart mb-nginx
+            - name: Static generate
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.STAGEHOST }}
+                username: mb
+                passphrase: ${{ secrets.STAGEDEPLPASS }}
+                key: ${{ secrets.STAGEDEPLKEY }}
+                script: docker-compose -f /var/maxibooking/d8b-back-django-cli.yml run --rm d8b-back-django-cli ./manage.py collectstatic --no-input
+
+            - name: Massages generate
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.STAGEHOST }}
+                username: mb
+                passphrase: ${{ secrets.STAGEDEPLPASS }}
+                key: ${{ secrets.STAGEDEPLKEY }}
+                script: docker-compose -f /var/maxibooking/d8b-back-django-cli.yml run --rm d8b-back-django-cli ./manage.py compilemessages -f
+
+            - name: Web restart
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.STAGEHOST }}
+                username: mb
+                passphrase: ${{ secrets.STAGEDEPLPASS }}
+                key: ${{ secrets.STAGEDEPLKEY }}
+                script: docker container restart d8b-back-web
 
             - name: Send email if failure tests
               uses: dawidd6/action-send-mail@v2
