--- a/.github/workflows/push_deploy_test.yml
+++ b/.github/workflows/push_deploy_test.yml
@@ -46,8 +46,8 @@ jobs:
                 username: mb
                 passphrase: ${{ secrets.STAGEDEPLPASS }}
                 key: ${{ secrets.STAGEDEPLKEY }}
-                script: docker-compose -f /var/maxibooking/d8b-front-npm-install.yml up
-                       
+                script: docker-compose -f /var/maxibooking/d8b-front-npm-cli.yml run --rm d8b-front-npm-cli npm install
+                                       
             - name: front build
               uses: appleboy/ssh-action@master
               with:
@@ -55,7 +55,7 @@ jobs:
                 username: mb
                 passphrase: ${{ secrets.STAGEDEPLPASS }}
                 key: ${{ secrets.STAGEDEPLKEY }}
-                script: docker-compose -f /var/maxibooking/d8b-front-npm-build.yml up
+                script: docker-compose -f /var/maxibooking/d8b-front-npm-cli.yml run --rm d8b-front-npm-cli node_modules/.bin/ng build --prod
 
             - name: nginx restart
               uses: appleboy/ssh-action@master
@@ -75,14 +75,11 @@ jobs:
                 username: ${{secrets.MAIL_USERNAME}}
                 password: ${{secrets.MAIL_PASSWORD}}
                 subject: Github Actions - test failure
-                # Literal body:
-                body: Tests of ${{github.repository}} on push are failure
-                to: k.grebennikov@maxi-booking.ru
+                body: Tests of ${{github.repository}} on push are not passed
+                to: ${{secrets.MAIL_RECEPIENTS}}
                 from: Github actions # <user@example.com>
                 # Optional content type (defaults to text/plain):
                 content_type: text/html
-                # Optional attachments:
-                # attachments: attachments.zip,git.diff,./dist/static/main.js
                     
             - name: Send email if success tests
               uses: dawidd6/action-send-mail@v2
@@ -94,10 +91,8 @@ jobs:
                 password: ${{secrets.MAIL_PASSWORD}}
                 subject: Github Actions - test success
                 # Literal body:
-                body: Tests of ${{github.repository}} are success
-                to: k.grebennikov@maxi-booking.ru
+                body: Tests of ${{github.repository}} completed successfully
+                to: ${{secrets.MAIL_RECEPIENTS}}
                 from: Github actions # <user@example.com>
                 # Optional content type (defaults to text/plain):
                 content_type: text/html
-                # Optional attachments:
-                # attachments: attachments.zip,git.diff,./dist/static/main.js
