--- a/.github/workflows/pull_request_test.yml
+++ b/.github/workflows/pull_request_test.yml
@@ -20,6 +20,9 @@ jobs:
               with:
                 ref: ${{ github.event.pull_request.head.ref }}
 
+            - name: Check branch
+              run: git status
+
             - name: Install
               run: npm install
 
@@ -29,27 +32,9 @@ jobs:
 #            - name: Lint
 #              run: npm run lint
 
-            - name: Test
-              run: npm run test -- --no-watch
-                     
-            - name: Send email if failure tests
-              uses: dawidd6/action-send-mail@v2
-              if: ${{ failure() }}
-              with:
-                server_address: smtp.yandex.ru
-                server_port: 465
-                username: ${{secrets.MAIL_USERNAME}}
-                password: ${{secrets.MAIL_PASSWORD}}
-                subject: Github Actions - test failure
-                # Literal body:
-                body: Tests of ${{github.repository}} are failure
-                to: ko.grebennikov@gmail.com
-                from: Github actions # <user@example.com>
-                # Optional content type (defaults to text/plain):
-                content_type: text/html
-                # Optional attachments:
-                # attachments: attachments.zip,git.diff,./dist/static/main.js
-                    
+#            - name: Test
+#              run: npm run test -- --no-watch
+                                        
             - name: Send email if success tests
               uses: dawidd6/action-send-mail@v2
               if: ${{ success() }}
