--- a/.github/workflows/pull_request_test.yml
+++ b/.github/workflows/pull_request_test.yml
@@ -9,8 +9,7 @@ jobs:
                 node-version: [13.x]
 
         steps:
-           - uses: actions/checkout@v1
-
+            #- uses: actions/checkout@v1
             - name: Node ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
