Change condition for workflow

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -1,5 +1,9 @@
 name: Email test
-on: [workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 jobs:
       build:
         name: Build
