--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Send email if success tests
+            - name: Send email if push in master
               uses: dawidd6/action-send-mail@v2
               if: ${{ success() }}
               with:
@@ -18,7 +18,7 @@ jobs:
                 server_port: 465
                 username: ${{secrets.MAIL_USERNAME}}
                 password: ${{secrets.MAIL_PASSWORD}}
-                subject: Github Actions - test success
+                subject: Github Actions - push in master
                 # Literal body:
                 body: Tests of ${{github.repository}} are success
                 to: k.grebennikov@maxi-booking.ru
