Remove branche name from manual run

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
     workflow_dispatch:
-      - master
+      # - master
 jobs:
       build:
         name: Build
