--- a/.github/workflows/back_on_push_test.yml
+++ b/.github/workflows/back_on_push_test.yml
@@ -111,15 +111,6 @@ jobs:
                 key: ${{ secrets.STAGEDEPLKEY }}
                 script: docker-compose -f /var/maxibooking/d8b-back-main-composer.yml up -d d8b-back-web
 
-            # - name: Web restart
-            #   uses: appleboy/ssh-action@master
-            #   with:
-            #     host: ${{ secrets.STAGEHOST }}
-            #     username: mb
-            #     passphrase: ${{ secrets.STAGEDEPLPASS }}
-            #     key: ${{ secrets.STAGEDEPLKEY }}
-            #     script: docker container restart d8b-back-web
-
             - name: Send email if failure tests
               uses: dawidd6/action-send-mail@v2
               if: ${{ failure() }}
@@ -129,14 +120,10 @@ jobs:
                 username: ${{secrets.MAIL_USERNAME}}
                 password: ${{secrets.MAIL_PASSWORD}}
                 subject: Github Actions - test failure
-                # Literal body:
                 body: Tests of ${{github.repository}} on push are failure
-                to: k.grebennikov@maxi-booking.ru
-                from: Github actions # <user@example.com>
-                # Optional content type (defaults to text/plain):
+                to: {{secrets.FAIL_MAIL_RECEPIENTS}}
+                from: Github actions
                 content_type: text/html
-                # Optional attachments:
-                # attachments: attachments.zip,git.diff,./dist/static/main.js
                     
             - name: Send email if success tests
               uses: dawidd6/action-send-mail@v2
@@ -147,11 +134,7 @@ jobs:
                 username: ${{secrets.MAIL_USERNAME}}
                 password: ${{secrets.MAIL_PASSWORD}}
                 subject: Github Actions - test success
-                # Literal body:
                 body: Tests of ${{github.repository}} are success
-                to: k.grebennikov@maxi-booking.ru
-                from: Github actions # <user@example.com>
-                # Optional content type (defaults to text/plain):
+                to: ${{secrets.SUCCESS_MAIL_RECEPIENTS}}
+                from: Github actions
                 content_type: text/html
-                # Optional attachments:
-                # attachments: attachments.zip,git.diff,./dist/static/main.js
