--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -21,7 +21,7 @@ jobs:
                 server_port: 465
                 username: ${{secrets.MAIL_USERNAME}}
                 password: ${{secrets.MAIL_PASSWORD}}
-                subject: Github Actions - workflow test
+                subject: Workflow test is success
                 # Literal body:
                 body: Tests of ${{github.repository}} are success
                 to: k.grebennikov@maxi-booking.ru
