--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -12,7 +12,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Send email if push in master
+            - name: Send email if other workflow is success
               uses: dawidd6/action-send-mail@v2
               if: ${{ github.event.workflow_run.conclusion == 'success' }}
               # ${{ success() }}
@@ -23,7 +23,7 @@ jobs:
                 password: ${{secrets.MAIL_PASSWORD}}
                 subject: Workflow test is success
                 # Literal body:
-                body: Tests of ${{github.repository}} are success
+                body: ${{github.repository}} are success
                 to: k.grebennikov@maxi-booking.ru
                 from: Github actions # <user@example.com>
                 # Optional content type (defaults to text/plain):
