--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -7,6 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
+    job1:
+      if: ${{ github.event.workflow_run.conclusion == 'success' }}
       build:
         name: Build
         runs-on: ubuntu-latest
