--- a/.github/workflows/pr_frnt_deploy.yml
+++ b/.github/workflows/pr_frnt_deploy.yml
@@ -13,7 +13,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: mb
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: |
@@ -24,7 +24,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: mb
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: docker-compose -f d8b-back-npm-cli.yml run --rm d8b-front-npm-cli npm install
@@ -33,7 +33,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: mb
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: docker-compose -f d8b-back-npm-cli.yml run --rm d8b-front-npm-cli node_modules/.bin/ng build --prod
@@ -42,7 +42,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: mb
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: |
@@ -53,7 +53,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: mb
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: |
@@ -63,7 +63,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: mb
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: docker container restart d8b-nginx
